# text2geoql-dataset

./: .gitignore  .tool-versions  Makefile  README.md  good_concerns.yaml  good_words.txt  pyproject.toml  requirements.txt  run_overnight.sh  tokyo_23_wards.txt
docs/: benchmark-report-20260320-num-ctx.md
docs/ADR/: ADR-001-trident-intermediate-representation.md  ADR-002-self-hosted-overpass-api-grounding.md  ADR-003-llm-few-shot-overpassql-generation.md  ADR-004-hierarchical-file-based-dataset-storage.md  ADR-005-provenance-and-failure-metadata.md  ADR-006-multi-model-benchmark-framework.md  ADR-007-nominatim-area-grounding.md  ADR-008-taginfo-osm-tag-knowledge.md  ADR-009-semantic-tag-grouping.md  ADR-010-llama-server-backend-for-apertus.md  README.md
docs/project-notes/: README.md  batch-generation-report-20260321.md  benchmark-results-all-models.md
docs/research_discussion/: RD-001-why-this-setup-works-remarkably-well.md  (+6 more)
results/: multilevel_pairs_generation.json
src/: batch_generate.py  benchmark_models.py  compile.py  feasibility_nominatim_taginfo.py  find_orphan_trident.py  generate.py  generate_area.py  generate_multilevel_pairs.py  generate_overpassql.py  generate_overpassql_v2.py  generate_trident.py  llama_server_backend.py  meta.py  nominatim.py  overpass.py  populate_administrative.py  run_scan_concerns.py  scan_concerns.py  taginfo.py  trident.py  validate.py
tests/: test_batch_generate.py  test_benchmark_models.py  test_compile.py  test_e2e.py  test_find_orphan_trident.py  test_generate_overpassql.py  test_generate_overpassql_v2.py  test_generate_trident.py  test_llama_server_backend.py  test_meta.py  test_nominatim.py  test_overpass.py  test_populate_administrative.py  test_scan_concerns.py  test_taginfo.py  test_trident.py
(+208541 files in other folders)
