[project]
name = "text2geoql-dataset"
version = "0.1.0"
description = "Dataset generation for text-to-Overpass QL translation"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "langchain",
    "langchain-chroma",
    "langchain-ollama",
    "datasets",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests that call real Ollama and Overpass API (deselect with '-m not e2e')",
]

[tool.mypy]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "types-pyyaml>=6.0.12.20250915",
]
